<resources>
    <string name="app_name_en">Citizens</string>
    <string name="app_name_zh">城民</string>
    <string name="search_zh">搜索</string>
    <string name="search_hint_zh">输入搜索内容</string>
    <string name="bottom_tab_news">新闻</string>
    <string name="bottom_tab_match">赛况</string>
    <string name="bottom_tab_data">数据</string>
    <string name="bottom_tab_info">资料</string>
    <string name="refresh">刷新</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="epl">英超</string>
    <string name="ucl">欧冠</string>
    <string name="fa">足总杯</string>
    <string name="efl">联赛杯</string>
    <string name="radio_overview_data">总览</string>
    <string name="radio_epl_data">英超</string>
    <string name="radio_ucl_data">欧冠</string>
    <string name="radio_fa_data">足总杯</string>
    <string name="radio_efl_data">联赛杯</string>
    <string name="dialog_delete_label">是否删除该标签？</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="dialog_add_label">请输入要添加的标签</string>
    <string name="add">添加</string>
</resources>